--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "pg-listen": "^1.7.0"
   }
 }
