--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ts-node": "^10.9.1"
   },
   "dependencies": {
+    "@types/express": "^4.17.14",
+    "body-parser": "^1.20.1",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
